RESOLVED FIXED240710
Non-unified build fixes, late-ish May 2022 edition
https://bugs.webkit.org/show_bug.cgi?id=240710
Summary Non-unified build fixes, late-ish May 2022 edition
Adrian Perez
Reported 2022-05-20 02:05:44 PDT
📈️
Attachments
Adrian Perez
Comment 1 2022-05-20 02:09:21 PDT
The build error was: /app/webkit/Source/WebCore/rendering/svg/RenderSVGBlock.cpp:132:23: error: member access into incomplete type 'WebCore::RenderView' ASSERT(!view().frameView().layoutContext().isPaintOffsetCacheEnabled()); ^ /app/webkit/Source/WebCore/dom/Document.h:204:7: note: forward declaration of 'WebCore::RenderView' class RenderView; ^
Adrian Perez
Comment 2 2022-05-20 02:12:00 PDT
EWS
Comment 3 2022-05-20 02:16:56 PDT
Committed r294538 (250793@main): <https://commits.webkit.org/250793@main> Reviewed commits have been landed. Closing PR #824 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2022-05-20 02:17:14 PDT
Note You need to log in before you can comment on or make changes to this bug.