Non-unified build fixes, late-ish May 2022 edition https://bugs.webkit.org/show_bug.cgi?id=240710

Unreviewed build fix

* Source/WebCore/rendering/svg/RenderSVGBlock.cpp: Add missing RenderView.h inclusion.

Canonical link: https://commits.webkit.org/250793@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294538 268f45cc-cd09-0410-ab3c-d52691b4dbfc